# SentinelIQ

./: README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 064d13c85cd9_add_initial_schema.py  0f4f1916613b_first_commit_nai_vandim_na.py  5ec379faa943_account_lock_columns.py  6a69fcc77033_add_decision_and_breakdown_to_login_.py  edf3533313f2_some_changes.py  f00475d5262d_add_timestamps_to_users.py
backend/app/: deps.py
backend/app/api/: admin.py  auth.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/detection/: aggregate.py  behavioral.py  device.py  geo.py  velocity.py
backend/app/ml/: inference.py
backend/app/schemas/: auth.py  dto.py
backend/app/services/: auth.py  dashboard.py  email.py  lockout.py  mfa.py  notifications.py  otp.py  sessions.py
backend/app/templates/email/: mfa.html  new_device.html  register.html  suspicious_login.html  was_it_you.html
backend/scripts/: attack_simulator.py  clear_cache.py  make_admin.py
frontend/admin-dashboard/: next.config.ts  package-lock.json
frontend/admin-dashboard/app/: globals.css  layout.tsx  page.module.css  page.tsx  page.txt
frontend/client/: package-lock.json
ml_core/: evaluate_if.py  requirements.txt  sentineliq_inference_if.py  train_if.py
ml_core/data/: syn_auth_login_test.csv
ml_core/models/: iso_forest.pkl  model_meta.json  shap_explainer.pkl
ml_core/notebook/: fixdataset.ipynb  model.ipynb
ml_core/rba_dataset/: check.ipynb
scripts/: attack_simulator.py
(+40 files in other folders)
