[project]
name = "auth-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.47.0",
]
